# generic-vec

./: .gitignore  Cargo.toml  Makefile.toml  README.md  README.tpl  rustfmt.toml
.github/workflows/: main.yml  pr-fmt.yml  pr-test-core.yml
src/: extension.rs  impls.rs  iter.rs  lib.rs  raw.rs  set_len.rs  slice.rs
src/iter/: cursor.rs  drain.rs  drain_filter.rs  into_iter.rs  raw_cursor.rs  raw_drain.rs  splice.rs
src/raw/: alloc.rs  array.rs  capacity.rs  heap.rs  init.rs  slice.rs  uninit.rs  zero_sized.rs
src/raw/array/: nightly.rs  stable.rs
src/raw/heap/: nightly.rs  stable.rs
tests/: drain.rs  simple.rs  splice.rs  tests.rs
tests/template/: drain.rs  simple.rs  splice.rs  vec_ops.rs
tests/template/copy/: cursor.rs  drain.rs  into_iter.rs  splice.rs  vec_ops.rs
tests/template/owned/: cursor.rs  drain.rs  into_iter.rs  simple.rs  splice.rs  vec_ops.rs
