[package]
name = "generic-vec"
version = "0.1.0"
authors = ["RustyYato <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ['std', 'nightly']

std = ['alloc']
alloc = []
nightly = []

[dependencies]

[dev-dependencies]
mockalloc = '0.1'
static-alloc = '0.2'