[package]
name = 'generic-vec'
version = '0.1.1'
authors = ['RustyYato <krishna.sd.2012@gmail.com>']
edition = '2018'
license = 'MIT/Apache-2.0'
description = 'a vector implementation that can be used in `no_std` envioronments'
repository = 'https://github.com/RustyYato/generic-vec'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = 'actively-developed' }
github = { repository = 'rustyyato/generic-vec', workflow = 'main' }

[features]

default = ['std']

std = ['alloc']
alloc = []
nightly = []

[dependencies]

[dev-dependencies]
mockalloc = '0.1'
static-alloc = '0.2'